--- a/Config/config_fusenet.yaml
+++ b/Config/config_fusenet.yaml
@@ -11,16 +11,16 @@ training:
   epochs: 1
   num_workers: 2
   device: cuda
-  patience: 10
-  encoder: fusenet #resnet
+  patience: 8
+  encoder: resnet #fusenet #resnet
   fusion: "concat"
   freeze_candidates: false
   freeze_refiner: false
-  checkpoint_index: 400
+  checkpoint_index: 200
   val_every: 10
 
 optim:
-  lr: 1e-4
+  lr: 1e-5
   weight_decay: 0.0
 
 renderer:
