--- a/Config/config_fusenet.yaml
+++ b/Config/config_fusenet.yaml
@@ -1,7 +1,7 @@
 dataset:
   remote_base_url: ipd_data/ipd
-  cam_ids: [cam1] #, cam2, cam3]
-  modality: [rgb] #, depth, aolp, dolp]
+  cam_ids: [cam1, cam2, cam3]
+  modality: [rgb, depth] #, aolp, dolp]
   train_split: train_pbr
   val_split: val
   model_split: models
@@ -12,15 +12,15 @@ training:
   num_workers: 2
   device: cuda
   patience: 50
-  encoder: resnet #fusenet #resnet
-  fusion: "concat" #concat
+  encoder: fusenet #resnet #fusenet #resnet
+  fusion: transformer # "concat" #concat
   freeze_candidates: false
   freeze_refiner: false
   checkpoint_index: 200
   val_every: 10
 
 optim:
-  lr: 1e-4
+  lr: 3e-4
   weight_decay: 0.0
 
 renderer:
